Typo in notebook

--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -52,19 +52,8 @@
      "text": [
       "Requirement already satisfied: pytorch-functional in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (0.4.11)\n",
       "Requirement already satisfied: networkx in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (2.8.7)\n",
-      "Requirement already satisfied: matplotlib in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (3.5.2)\n",
-      "Requirement already satisfied: scipy in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (1.9.2)\n",
       "Requirement already satisfied: tqdm in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (4.64.1)\n",
       "Requirement already satisfied: torch>=1.9.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from pytorch-functional) (1.12.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (4.37.4)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (1.4.4)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (3.0.9)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (9.2.0)\n",
-      "Requirement already satisfied: numpy>=1.17 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (1.23.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (0.11.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (21.3)\n",
-      "Requirement already satisfied: six>=1.5 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
       "Requirement already satisfied: typing_extensions in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from torch>=1.9.0->pytorch-functional) (4.3.0)\n"
      ]
     }
@@ -127,13 +116,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x=<SymbolicTensor at 0x7fd44ee012e0; child of 0; parent of 0>\n",
-      "y=<SymbolicTensor at 0x7fd44ee01ac0; child of 0; parent of 0>\n",
+      "x=<SymbolicTensor at 0x7f14163c2820; child of 0; parent of 0>\n",
+      "y=<SymbolicTensor at 0x7f14163c2910; child of 0; parent of 0>\n",
       "\n",
       "After creating z = x + y:\n",
-      "x=<SymbolicTensor at 0x7fd44ee012e0; child of 0; parent of 1>\n",
-      "y=<SymbolicTensor at 0x7fd44ee01ac0; child of 0; parent of 1>\n",
-      "z=<SymbolicTensor at 0x7fd50439ab50; child of 2; parent of 0>\n"
+      "x=<SymbolicTensor at 0x7f14163c2820; child of 0; parent of 1>\n",
+      "y=<SymbolicTensor at 0x7f14163c2910; child of 0; parent of 1>\n",
+      "z=<SymbolicTensor at 0x7f14cc141eb0; child of 2; parent of 0>\n"
      ]
     }
    ],
@@ -186,9 +175,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x.children=[<SymbolicTensor at 0x7fd50439ab50; child of 2; parent of 0>]\n",
-      "y.children=[<SymbolicTensor at 0x7fd50439ab50; child of 2; parent of 0>]\n",
-      "z.parents=(<SymbolicTensor at 0x7fd44ee012e0; child of 0; parent of 1>, <SymbolicTensor at 0x7fd44ee01ac0; child of 0; parent of 1>)\n"
+      "x.children=[<SymbolicTensor at 0x7f14cc141eb0; child of 2; parent of 0>]\n",
+      "y.children=[<SymbolicTensor at 0x7f14cc141eb0; child of 2; parent of 0>]\n",
+      "z.parents=(<SymbolicTensor at 0x7f14163c2820; child of 0; parent of 1>, <SymbolicTensor at 0x7f14163c2910; child of 0; parent of 1>)\n"
      ]
     }
    ],
@@ -284,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -304,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -314,12 +303,12 @@
     {
      "data": {
       "text/plain": [
-       "[<SymbolicTensor at 0x7fd44e9ac7f0; child of 2; parent of 1>,\n",
-       " <SymbolicTensor at 0x7fd50439aa30; child of 2; parent of 1>,\n",
-       " <SymbolicTensor at 0x7fd50439ae50; child of 2; parent of 1>]"
+       "[<SymbolicTensor at 0x7f13e2408ac0; child of 2; parent of 1>,\n",
+       " <SymbolicTensor at 0x7f14163e3d60; child of 2; parent of 1>,\n",
+       " <SymbolicTensor at 0x7f13e2408d30; child of 2; parent of 1>]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -391,9 +380,9 @@
       "text/plain": [
        "FunctionalModel(\n",
        "  (module000_depth001): MulOpLayer()\n",
-       "  (module001_depth001): SubOpLayer()\n",
-       "  (module002_depth001): AddOpLayer()\n",
-       "  (module003_depth002): AnyOpLayer()\n",
+       "  (module001_depth001): AddOpLayer()\n",
+       "  (module002_depth002): AnyOpLayer()\n",
+       "  (module003_depth001): SubOpLayer()\n",
        "  (module004_depth003): AddOpLayer()\n",
        "  (module005_depth004): AddOpLayer()\n",
        "  (module006_depth005): AnyOpLayer()\n",
@@ -427,9 +416,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rx=tensor([0.1229])\n",
-      "ry=tensor([0.9218])\n",
-      "model(rx, ry)=tensor([0.1197])\n"
+      "rx=tensor([0.6804])\n",
+      "ry=tensor([0.7104])\n",
+      "model(rx, ry)=tensor([0.6147])\n"
      ]
     }
    ],
@@ -612,12 +601,12 @@
     "It means we will use functional model inside another functional model. Cool, isn't it?\n",
     "\n",
     "There'll be:\n",
-    "* 3 separete inputs\n",
-    "* 2 outputs\n",
+    "* 3 separate inputs\n",
+    "* 2 separate outputs\n",
     "\n",
     "After a few layers of separated computations, the results will be concatenated, then transformed some more and returned!\n",
     "\n",
-    "Now instead of Symbolic Tensors names, we'll see their shape."
+    "On the drawing, we will see the shapes of Symbolic Tensors."
    ]
   },
   {
@@ -695,7 +684,7 @@
     }
    },
    "source": [
-    "If we want, we can even \"zoom in\" to the inner FunctionamModel. Let's draw it."
+    "If we want, we can even \"zoom in\" to the inner FunctionalModel. Let's try it:"
    ]
   },
   {
@@ -723,7 +712,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That could be useful, if this inner model was more complicated!"
+    "This can be useful, if this model is complex and has many submodels!"
    ]
   },
   {
@@ -741,7 +730,7 @@
     "\n",
     "Let's use previous graph as an example.\n",
     "\n",
-    "Let's say we want a new model that shares weights with the previous one.\n",
+    "Let's say we want a new model that shares weights with the existing one.\n",
     "We want to omit the tower 1 and tower 3 computations, instead we'll provide their values \"by hand\" somehow."
    ]
   },
@@ -773,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -792,11 +781,26 @@
       "  (module003_depth003): Linear(in_features=30, out_features=5, bias=True)\n",
       ")\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[ 0.1984, -0.1993, -0.1680,  0.0118, -0.4479]],\n",
+       "        grad_fn=<AddmmBackward0>),\n",
+       " tensor([[ 0.0784, -0.0197,  0.4405]], grad_fn=<AddmmBackward0>))"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "model = FunctionalModel(inputs=(input1, input2, input3), outputs=(out1, out2))\n",
-    "print(model)"
+    "print(model)\n",
+    "\n",
+    "real_outputs = model(torch.rand(1, 10), torch.rand(1, 5), torch.rand(1, 10))\n",
+    "real_outputs"
    ]
   },
   {
@@ -958,7 +962,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6c04b77293a49219e72be46b5f50bd5",
+       "model_id": "30f6c80681fe402db2eaa2d515410a90",
        "version_major": 2,
        "version_minor": 0
       },
@@ -973,11 +977,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training accuracy in epoch 1: 95.562%\n",
-      "Average training accuracy in epoch 2: 98.910%\n",
-      "Average training accuracy in epoch 3: 99.178%\n",
-      "Average training accuracy in epoch 4: 99.298%\n",
-      "Average training accuracy in epoch 5: 99.448%\n"
+      "Average training accuracy in epoch 1: 95.162%\n",
+      "Average training accuracy in epoch 2: 98.990%\n",
+      "Average training accuracy in epoch 3: 99.204%\n",
+      "Average training accuracy in epoch 4: 99.428%\n",
+      "Average training accuracy in epoch 5: 99.482%\n"
      ]
     }
    ],
@@ -1025,7 +1029,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average validation accuracy: 99.240%\n"
+      "Average validation accuracy: 98.620%\n"
      ]
     }
    ],
@@ -1098,7 +1102,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ad2e5574bb340ea943ff3cc10fd2cfd",
+       "model_id": "cca61bdf40eb46e3888884ea286365da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1113,12 +1117,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training accuracy in epoch 1: 95.504%\n",
-      "Average training accuracy in epoch 2: 98.996%\n",
-      "Average training accuracy in epoch 3: 99.198%\n",
-      "Average training accuracy in epoch 4: 99.382%\n",
-      "Average training accuracy in epoch 5: 99.422%\n",
-      "Average validation accuracy: 99.190%\n"
+      "Average training accuracy in epoch 1: 95.694%\n",
+      "Average training accuracy in epoch 2: 99.008%\n",
+      "Average training accuracy in epoch 3: 99.206%\n",
+      "Average training accuracy in epoch 4: 99.398%\n",
+      "Average training accuracy in epoch 5: 99.426%\n",
+      "Average validation accuracy: 99.110%\n"
      ]
     }
    ],
