Rename docs, bump versio

--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -116,13 +116,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x=<SymbolicTensor at 0x7f14163c2820; child of 0; parent of 0>\n",
-      "y=<SymbolicTensor at 0x7f14163c2910; child of 0; parent of 0>\n",
+      "x=<SymbolicTensor at 0x7f8df0b0e2e0; child of 0; parent of 0>\n",
+      "y=<SymbolicTensor at 0x7f8df0b0eac0; child of 0; parent of 0>\n",
       "\n",
       "After creating z = x + y:\n",
-      "x=<SymbolicTensor at 0x7f14163c2820; child of 0; parent of 1>\n",
-      "y=<SymbolicTensor at 0x7f14163c2910; child of 0; parent of 1>\n",
-      "z=<SymbolicTensor at 0x7f14cc141eb0; child of 2; parent of 0>\n"
+      "x=<SymbolicTensor at 0x7f8df0b0e2e0; child of 0; parent of 1>\n",
+      "y=<SymbolicTensor at 0x7f8df0b0eac0; child of 0; parent of 1>\n",
+      "z=<SymbolicTensor at 0x7f8ea40aaee0; child of 2; parent of 0>\n"
      ]
     }
    ],
@@ -175,9 +175,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x.children=[<SymbolicTensor at 0x7f14cc141eb0; child of 2; parent of 0>]\n",
-      "y.children=[<SymbolicTensor at 0x7f14cc141eb0; child of 2; parent of 0>]\n",
-      "z.parents=(<SymbolicTensor at 0x7f14163c2820; child of 0; parent of 1>, <SymbolicTensor at 0x7f14163c2910; child of 0; parent of 1>)\n"
+      "x.children=[<SymbolicTensor at 0x7f8ea40aaee0; child of 2; parent of 0>]\n",
+      "y.children=[<SymbolicTensor at 0x7f8ea40aaee0; child of 2; parent of 0>]\n",
+      "z.parents=(<SymbolicTensor at 0x7f8df0b0e2e0; child of 0; parent of 1>, <SymbolicTensor at 0x7f8df0b0eac0; child of 0; parent of 1>)\n"
      ]
     }
    ],
@@ -303,9 +303,9 @@
     {
      "data": {
       "text/plain": [
-       "[<SymbolicTensor at 0x7f13e2408ac0; child of 2; parent of 1>,\n",
-       " <SymbolicTensor at 0x7f14163e3d60; child of 2; parent of 1>,\n",
-       " <SymbolicTensor at 0x7f13e2408d30; child of 2; parent of 1>]"
+       "[<SymbolicTensor at 0x7f8dbcb6aee0; child of 2; parent of 1>,\n",
+       " <SymbolicTensor at 0x7f8df0b2eaf0; child of 2; parent of 1>,\n",
+       " <SymbolicTensor at 0x7f8df0b1ce80; child of 2; parent of 1>]"
       ]
      },
      "execution_count": 7,
@@ -379,10 +379,10 @@
      "data": {
       "text/plain": [
        "FunctionalModel(\n",
-       "  (module000_depth001): MulOpLayer()\n",
-       "  (module001_depth001): AddOpLayer()\n",
-       "  (module002_depth002): AnyOpLayer()\n",
-       "  (module003_depth001): SubOpLayer()\n",
+       "  (module000_depth001): SubOpLayer()\n",
+       "  (module001_depth001): MulOpLayer()\n",
+       "  (module002_depth001): AddOpLayer()\n",
+       "  (module003_depth002): AnyOpLayer()\n",
        "  (module004_depth003): AddOpLayer()\n",
        "  (module005_depth004): AddOpLayer()\n",
        "  (module006_depth005): AnyOpLayer()\n",
@@ -416,9 +416,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rx=tensor([0.6804])\n",
-      "ry=tensor([0.7104])\n",
-      "model(rx, ry)=tensor([0.6147])\n"
+      "rx=tensor([0.4673])\n",
+      "ry=tensor([0.4343])\n",
+      "model(rx, ry)=tensor([0.3792])\n"
      ]
     }
    ],
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -785,12 +785,11 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.1984, -0.1993, -0.1680,  0.0118, -0.4479]],\n",
-       "        grad_fn=<AddmmBackward0>),\n",
-       " tensor([[ 0.0784, -0.0197,  0.4405]], grad_fn=<AddmmBackward0>))"
+       "(tensor([[0.2095, 0.3111, 0.3564, 0.3988, 0.2240]], grad_fn=<AddmmBackward0>),\n",
+       " tensor([[-0.1661, -0.1345,  0.0384]], grad_fn=<AddmmBackward0>))"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +961,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30f6c80681fe402db2eaa2d515410a90",
+       "model_id": "df8ad7474e9c457087ee4a3ee4731bd9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -977,11 +976,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training accuracy in epoch 1: 95.162%\n",
-      "Average training accuracy in epoch 2: 98.990%\n",
-      "Average training accuracy in epoch 3: 99.204%\n",
-      "Average training accuracy in epoch 4: 99.428%\n",
-      "Average training accuracy in epoch 5: 99.482%\n"
+      "Average training accuracy in epoch 1: 95.186%\n",
+      "Average training accuracy in epoch 2: 98.894%\n",
+      "Average training accuracy in epoch 3: 99.244%\n",
+      "Average training accuracy in epoch 4: 99.302%\n",
+      "Average training accuracy in epoch 5: 99.508%\n"
      ]
     }
    ],
@@ -1029,7 +1028,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average validation accuracy: 98.620%\n"
+      "Average validation accuracy: 98.980%\n"
      ]
     }
    ],
@@ -1102,7 +1101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cca61bdf40eb46e3888884ea286365da",
+       "model_id": "ce4fd73bcdf548bb887906b085ddb9f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1117,12 +1116,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training accuracy in epoch 1: 95.694%\n",
-      "Average training accuracy in epoch 2: 99.008%\n",
-      "Average training accuracy in epoch 3: 99.206%\n",
-      "Average training accuracy in epoch 4: 99.398%\n",
-      "Average training accuracy in epoch 5: 99.426%\n",
-      "Average validation accuracy: 99.110%\n"
+      "Average training accuracy in epoch 1: 95.360%\n",
+      "Average training accuracy in epoch 2: 98.940%\n",
+      "Average training accuracy in epoch 3: 99.234%\n",
+      "Average training accuracy in epoch 4: 99.374%\n",
+      "Average training accuracy in epoch 5: 99.480%\n",
+      "Average validation accuracy: 99.150%\n"
      ]
     }
    ],
