--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -50,11 +50,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pytorch-functional in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (0.4.11)\n",
+      "Requirement already satisfied: pytorch-functional in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (0.5.2)\n",
       "Requirement already satisfied: networkx in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (2.8.7)\n",
       "Requirement already satisfied: tqdm in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (4.64.1)\n",
-      "Requirement already satisfied: torch>=1.9.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from pytorch-functional) (1.12.1)\n",
-      "Requirement already satisfied: typing_extensions in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from torch>=1.9.0->pytorch-functional) (4.3.0)\n"
+      "Requirement already satisfied: torch>=1.12.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from pytorch-functional) (1.12.1)\n",
+      "Requirement already satisfied: typing_extensions in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from torch>=1.12.0->pytorch-functional) (4.3.0)\n"
      ]
     }
    ],
@@ -116,13 +116,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x=<SymbolicTensor at 0x7f8df0b0e2e0; child of 0; parent of 0>\n",
-      "y=<SymbolicTensor at 0x7f8df0b0eac0; child of 0; parent of 0>\n",
+      "x=<SymbolicTensor at 0x7fcf7dc812e0; child of 0; parent of 0>\n",
+      "y=<SymbolicTensor at 0x7fcf7dc81ac0; child of 0; parent of 0>\n",
       "\n",
       "After creating z = x + y:\n",
-      "x=<SymbolicTensor at 0x7f8df0b0e2e0; child of 0; parent of 1>\n",
-      "y=<SymbolicTensor at 0x7f8df0b0eac0; child of 0; parent of 1>\n",
-      "z=<SymbolicTensor at 0x7f8ea40aaee0; child of 2; parent of 0>\n"
+      "x=<SymbolicTensor at 0x7fcf7dc812e0; child of 0; parent of 1>\n",
+      "y=<SymbolicTensor at 0x7fcf7dc81ac0; child of 0; parent of 1>\n",
+      "z=<SymbolicTensor at 0x7fd034a2db80; child of 2; parent of 0>\n"
      ]
     }
    ],
@@ -175,9 +175,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x.children=[<SymbolicTensor at 0x7f8ea40aaee0; child of 2; parent of 0>]\n",
-      "y.children=[<SymbolicTensor at 0x7f8ea40aaee0; child of 2; parent of 0>]\n",
-      "z.parents=(<SymbolicTensor at 0x7f8df0b0e2e0; child of 0; parent of 1>, <SymbolicTensor at 0x7f8df0b0eac0; child of 0; parent of 1>)\n"
+      "x.children=[<SymbolicTensor at 0x7fd034a2db80; child of 2; parent of 0>]\n",
+      "y.children=[<SymbolicTensor at 0x7fd034a2db80; child of 2; parent of 0>]\n",
+      "z.parents=(<SymbolicTensor at 0x7fcf7dc812e0; child of 0; parent of 1>, <SymbolicTensor at 0x7fcf7dc81ac0; child of 0; parent of 1>)\n"
      ]
     }
    ],
@@ -303,9 +303,9 @@
     {
      "data": {
       "text/plain": [
-       "[<SymbolicTensor at 0x7f8dbcb6aee0; child of 2; parent of 1>,\n",
-       " <SymbolicTensor at 0x7f8df0b2eaf0; child of 2; parent of 1>,\n",
-       " <SymbolicTensor at 0x7f8df0b1ce80; child of 2; parent of 1>]"
+       "[<SymbolicTensor at 0x7fcf7dc81e80; child of 2; parent of 1>,\n",
+       " <SymbolicTensor at 0x7fcf7dc81d90; child of 2; parent of 1>,\n",
+       " <SymbolicTensor at 0x7fd03020caf0; child of 2; parent of 1>]"
       ]
      },
      "execution_count": 7,
@@ -379,8 +379,8 @@
      "data": {
       "text/plain": [
        "FunctionalModel(\n",
-       "  (module000_depth001): SubOpLayer()\n",
-       "  (module001_depth001): MulOpLayer()\n",
+       "  (module000_depth001): MulOpLayer()\n",
+       "  (module001_depth001): SubOpLayer()\n",
        "  (module002_depth001): AddOpLayer()\n",
        "  (module003_depth002): AnyOpLayer()\n",
        "  (module004_depth003): AddOpLayer()\n",
@@ -416,9 +416,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rx=tensor([0.4673])\n",
-      "ry=tensor([0.4343])\n",
-      "model(rx, ry)=tensor([0.3792])\n"
+      "rx=tensor([0.3532])\n",
+      "ry=tensor([0.0580])\n",
+      "model(rx, ry)=tensor([0.2423])\n"
      ]
     }
    ],
@@ -785,8 +785,9 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[0.2095, 0.3111, 0.3564, 0.3988, 0.2240]], grad_fn=<AddmmBackward0>),\n",
-       " tensor([[-0.1661, -0.1345,  0.0384]], grad_fn=<AddmmBackward0>))"
+       "(tensor([[ 0.3959,  0.2058,  0.0661, -0.2138,  0.0657]],\n",
+       "        grad_fn=<AddmmBackward0>),\n",
+       " tensor([[ 0.1735, -0.1976,  0.4599]], grad_fn=<AddmmBackward0>))"
       ]
      },
      "execution_count": 17,
@@ -961,7 +962,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df8ad7474e9c457087ee4a3ee4731bd9",
+       "model_id": "6005b055942944b885885b9d66602e0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -976,11 +977,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training accuracy in epoch 1: 95.186%\n",
-      "Average training accuracy in epoch 2: 98.894%\n",
-      "Average training accuracy in epoch 3: 99.244%\n",
-      "Average training accuracy in epoch 4: 99.302%\n",
-      "Average training accuracy in epoch 5: 99.508%\n"
+      "Average training accuracy in epoch 1: 95.936%\n",
+      "Average training accuracy in epoch 2: 98.962%\n",
+      "Average training accuracy in epoch 3: 99.208%\n",
+      "Average training accuracy in epoch 4: 99.406%\n",
+      "Average training accuracy in epoch 5: 99.440%\n"
      ]
     }
    ],
@@ -1028,7 +1029,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average validation accuracy: 98.980%\n"
+      "Average validation accuracy: 99.030%\n"
      ]
     }
    ],
@@ -1101,7 +1102,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce4fd73bcdf548bb887906b085ddb9f5",
+       "model_id": "e0010eee2b1e40efb65b9ad67f5e7745",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1116,12 +1117,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training accuracy in epoch 1: 95.360%\n",
-      "Average training accuracy in epoch 2: 98.940%\n",
-      "Average training accuracy in epoch 3: 99.234%\n",
+      "Average training accuracy in epoch 1: 95.194%\n",
+      "Average training accuracy in epoch 2: 98.944%\n",
+      "Average training accuracy in epoch 3: 99.288%\n",
       "Average training accuracy in epoch 4: 99.374%\n",
-      "Average training accuracy in epoch 5: 99.480%\n",
-      "Average validation accuracy: 99.150%\n"
+      "Average training accuracy in epoch 5: 99.494%\n",
+      "Average validation accuracy: 99.060%\n"
      ]
     }
    ],
