Add torchvision to notebook

--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -63,7 +63,7 @@
     }
    ],
    "source": [
-    "!pip install pytorch-functional networkx matplotlib scipy tqdm"
+    "!pip install pytorch-functional torchvision networkx matplotlib scipy tqdm"
    ]
   },
   {
