--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -54,11 +54,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pytorch-functional in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (0.4.11)\n",
+      "Requirement already satisfied: pytorch-functional in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (0.5.2)\n",
+      "Requirement already satisfied: torchvision in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (0.13.1)\n",
       "Requirement already satisfied: networkx in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (2.8.7)\n",
+      "Requirement already satisfied: matplotlib in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (3.5.2)\n",
+      "Requirement already satisfied: scipy in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (1.9.2)\n",
       "Requirement already satisfied: tqdm in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (4.64.1)\n",
-      "Requirement already satisfied: torch>=1.9.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from pytorch-functional) (1.12.1)\n",
-      "Requirement already satisfied: typing_extensions in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from torch>=1.9.0->pytorch-functional) (4.3.0)\n"
+      "Requirement already satisfied: torch>=1.12.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from pytorch-functional) (1.12.1)\n",
+      "Requirement already satisfied: typing_extensions in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from torchvision) (4.3.0)\n",
+      "Requirement already satisfied: numpy in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from torchvision) (1.23.1)\n",
+      "Requirement already satisfied: requests in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from torchvision) (2.28.1)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from torchvision) (9.2.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (21.3)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (1.4.4)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (4.37.4)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from requests->torchvision) (1.26.11)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from requests->torchvision) (3.3)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from requests->torchvision) (2.0.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from requests->torchvision) (2022.9.24)\n"
      ]
     }
    ],
@@ -82,7 +99,7 @@
    "source": [
     "import torch\n",
     "from torch import nn\n",
-    "from pytorch_functional import FunctionalModel, Input, layers, graph_algorithms\n",
+    "from pytorch_functional import FunctionalModel, Input, useful_layers, graph_algorithms\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -120,13 +137,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x=<SymbolicTensor at 0x7f8df0b0e2e0; child of 0; parent of 0>\n",
-      "y=<SymbolicTensor at 0x7f8df0b0eac0; child of 0; parent of 0>\n",
+      "x=<SymbolicTensor at 0x7fa0eeae6280; child of 0; parent of 0>\n",
+      "y=<SymbolicTensor at 0x7fa19c780a30; child of 0; parent of 0>\n",
       "\n",
       "After creating z = x + y:\n",
-      "x=<SymbolicTensor at 0x7f8df0b0e2e0; child of 0; parent of 1>\n",
-      "y=<SymbolicTensor at 0x7f8df0b0eac0; child of 0; parent of 1>\n",
-      "z=<SymbolicTensor at 0x7f8ea40aaee0; child of 2; parent of 0>\n"
+      "x=<SymbolicTensor at 0x7fa0eeae6280; child of 0; parent of 1>\n",
+      "y=<SymbolicTensor at 0x7fa19c780a30; child of 0; parent of 1>\n",
+      "z=<SymbolicTensor at 0x7fa19c79a400; child of 2; parent of 0>\n"
      ]
     }
    ],
@@ -179,9 +196,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x.children=[<SymbolicTensor at 0x7f8ea40aaee0; child of 2; parent of 0>]\n",
-      "y.children=[<SymbolicTensor at 0x7f8ea40aaee0; child of 2; parent of 0>]\n",
-      "z.parents=(<SymbolicTensor at 0x7f8df0b0e2e0; child of 0; parent of 1>, <SymbolicTensor at 0x7f8df0b0eac0; child of 0; parent of 1>)\n"
+      "x.children=[<SymbolicTensor at 0x7fa19c79a400; child of 2; parent of 0>]\n",
+      "y.children=[<SymbolicTensor at 0x7fa19c79a400; child of 2; parent of 0>]\n",
+      "z.parents=(<SymbolicTensor at 0x7fa0eeae6280; child of 0; parent of 1>, <SymbolicTensor at 0x7fa19c780a30; child of 0; parent of 1>)\n"
      ]
     }
    ],
@@ -307,9 +324,9 @@
     {
      "data": {
       "text/plain": [
-       "[<SymbolicTensor at 0x7f8dbcb6aee0; child of 2; parent of 1>,\n",
-       " <SymbolicTensor at 0x7f8df0b2eaf0; child of 2; parent of 1>,\n",
-       " <SymbolicTensor at 0x7f8df0b1ce80; child of 2; parent of 1>]"
+       "[<SymbolicTensor at 0x7fa0eeae6c70; child of 2; parent of 1>,\n",
+       " <SymbolicTensor at 0x7fa0eeaf5580; child of 2; parent of 1>,\n",
+       " <SymbolicTensor at 0x7fa0eeae6e20; child of 2; parent of 1>]"
       ]
      },
      "execution_count": 7,
@@ -383,10 +400,10 @@
      "data": {
       "text/plain": [
        "FunctionalModel(\n",
-       "  (module000_depth001): SubOpLayer()\n",
-       "  (module001_depth001): MulOpLayer()\n",
-       "  (module002_depth001): AddOpLayer()\n",
-       "  (module003_depth002): AnyOpLayer()\n",
+       "  (module000_depth001): AddOpLayer()\n",
+       "  (module001_depth002): AnyOpLayer()\n",
+       "  (module002_depth001): MulOpLayer()\n",
+       "  (module003_depth001): SubOpLayer()\n",
        "  (module004_depth003): AddOpLayer()\n",
        "  (module005_depth004): AddOpLayer()\n",
        "  (module006_depth005): AnyOpLayer()\n",
@@ -420,9 +437,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rx=tensor([0.4673])\n",
-      "ry=tensor([0.4343])\n",
-      "model(rx, ry)=tensor([0.3792])\n"
+      "rx=tensor([0.5827])\n",
+      "ry=tensor([0.9853])\n",
+      "model(rx, ry)=tensor([0.5799])\n"
      ]
     }
    ],
@@ -642,7 +659,7 @@
     "for x, tower in zip(inputs, towers):\n",
     "    tower_outputs.append(tower(x))\n",
     "\n",
-    "x = layers.ConcatLayer(dim=1)(*tower_outputs)\n",
+    "x = useful_layers.ConcatLayer(dim=1)(*tower_outputs)\n",
     "\n",
     "out1 = nn.Linear(x.features, 5)(x)\n",
     "out2 = nn.Linear(x.features, 3)(x)\n",
@@ -813,8 +830,9 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[0.2095, 0.3111, 0.3564, 0.3988, 0.2240]], grad_fn=<AddmmBackward0>),\n",
-       " tensor([[-0.1661, -0.1345,  0.0384]], grad_fn=<AddmmBackward0>))"
+       "(tensor([[-0.1071, -0.1939, -0.1143, -0.2304, -0.0757]],\n",
+       "        grad_fn=<AddmmBackward0>),\n",
+       " tensor([[-0.1766,  0.1077, -0.1224]], grad_fn=<AddmmBackward0>))"
       ]
      },
      "execution_count": 17,
@@ -997,7 +1015,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df8ad7474e9c457087ee4a3ee4731bd9",
+       "model_id": "d180aa01e4634d1da4b882e912e2b548",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1012,11 +1030,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training accuracy in epoch 1: 95.186%\n",
-      "Average training accuracy in epoch 2: 98.894%\n",
-      "Average training accuracy in epoch 3: 99.244%\n",
-      "Average training accuracy in epoch 4: 99.302%\n",
-      "Average training accuracy in epoch 5: 99.508%\n"
+      "Average training accuracy in epoch 1: 95.506%\n",
+      "Average training accuracy in epoch 2: 99.008%\n",
+      "Average training accuracy in epoch 3: 99.262%\n",
+      "Average training accuracy in epoch 4: 99.380%\n",
+      "Average training accuracy in epoch 5: 99.392%\n"
      ]
     }
    ],
@@ -1064,7 +1082,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average validation accuracy: 98.980%\n"
+      "Average validation accuracy: 99.220%\n"
      ]
     }
    ],
@@ -1137,7 +1155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce4fd73bcdf548bb887906b085ddb9f5",
+       "model_id": "632cd81335c54c45ad2a1868a7c77513",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1152,12 +1170,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training accuracy in epoch 1: 95.360%\n",
-      "Average training accuracy in epoch 2: 98.940%\n",
-      "Average training accuracy in epoch 3: 99.234%\n",
-      "Average training accuracy in epoch 4: 99.374%\n",
-      "Average training accuracy in epoch 5: 99.480%\n",
-      "Average validation accuracy: 99.150%\n"
+      "Average training accuracy in epoch 1: 95.266%\n",
+      "Average training accuracy in epoch 2: 98.816%\n",
+      "Average training accuracy in epoch 3: 99.182%\n",
+      "Average training accuracy in epoch 4: 99.396%\n",
+      "Average training accuracy in epoch 5: 99.504%\n",
+      "Average validation accuracy: 99.130%\n"
      ]
     }
    ],
